--- a/app/src/main/res/layout/activity_upload_page.xml
+++ b/app/src/main/res/layout/activity_upload_page.xml
@@ -18,10 +18,11 @@
     <ExpandableListView
         android:id="@+id/lvExp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="165dp"
         android:layout_above="@+id/bottomNavigationView"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/butGo"></ExpandableListView>
+        android:layout_below="@+id/butGo"
+        android:layout_marginBottom="202dp"></ExpandableListView>
 
 
 
@@ -36,6 +37,14 @@
         android:layout_marginBottom="5dp"
         android:text="อัพโหลด" />
 
+    <Button
+        android:id="@+id/checkbutt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="142dp"
+        android:text="Button" />
 
 
 </RelativeLayout>
