--- a/app/src/main/res/layout/activity_upload_page.xml
+++ b/app/src/main/res/layout/activity_upload_page.xml
@@ -16,13 +16,13 @@
         design:menu="@menu/menu_navigation" />
 
     <ExpandableListView
+        android:layout_margin="10dp"
         android:id="@+id/lvExp"
         android:layout_width="match_parent"
-        android:layout_height="165dp"
-        android:layout_above="@+id/bottomNavigationView"
+        android:layout_height="365dp"
+        android:layout_above="@+id/butGo"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/butGo"
-        android:layout_marginBottom="202dp"></ExpandableListView>
+        android:layout_marginBottom="2dp"></ExpandableListView>
 
 
 
@@ -35,16 +35,8 @@
         android:layout_margin="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
-        android:text="อัพโหลด" />
-
-    <Button
-        android:id="@+id/checkbutt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="142dp"
-        android:text="Button" />
+        android:text="อัพโหลด"
+        android:layout_above="@id/bottomNavigationView"/>
 
 
 </RelativeLayout>
