--- a/app/src/main/res/layout/activity_download_location_page.xml
+++ b/app/src/main/res/layout/activity_download_location_page.xml
@@ -65,13 +65,13 @@
 
     </LinearLayout>
 
+
     <ExpandableListView
         android:id="@+id/lvExp"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="309dp"
         android:layout_above="@+id/bottomNavigationView"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearLayout3"></ExpandableListView>
+        android:layout_alignParentStart="true"></ExpandableListView>
 
 
 
