--- a/app/src/main/res/layout/activity_download_location_page.xml
+++ b/app/src/main/res/layout/activity_download_location_page.xml
@@ -20,69 +20,68 @@
         android:id="@+id/refreshdownload"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottomNavigationView">
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
-
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:layout_marginTop="1dp"
-        android:id="@+id/linearLayout3">
 
         <LinearLayout
+            android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_marginTop="1dp"
+            android:orientation="vertical"
+            android:paddingBottom="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="16dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="จังหวัด :"
-                android:layout_margin ="5dp"
-                android:textAlignment="center"
-                android:textSize="22dp"/>
-            <Spinner
-                android:id="@+id/addBox"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_margin="5dp"
-                android:entries="@array/province_array">
-            </Spinner>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="จังหวัด :"
+                    android:textAlignment="center"
+                    android:textSize="22dp" />
+
+                <Spinner
+                    android:id="@+id/addBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_margin="5dp"
+                    android:entries="@array/province_array"></Spinner>
+
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/addButt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/button"
+                android:text="ดาวน์โหลด" />
+
+            <ExpandableListView
+                android:layout_marginTop="2dp"
+                android:id="@+id/lvExp"
+                android:layout_width="match_parent"
+                android:layout_height="317dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginBottom="78dp">
+
+            </ExpandableListView>
 
 
         </LinearLayout>
 
-        <Button
-            android:id="@+id/addButt"
-            android:background="@drawable/button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="ดาวน์โหลด" />
-
-
-
-    </LinearLayout>
-
-
-    <ExpandableListView
-        android:id="@+id/lvExp"
-        android:layout_width="wrap_content"
-        android:layout_height="309dp"
-        android:layout_above="@+id/bottomNavigationView"
-        android:layout_alignParentStart="true">
-
-    </ExpandableListView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
