--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -26,15 +26,12 @@
         android:id="@+id/pass"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:background="#11000000"
+        android:layout_centerInParent="true"
 
+        android:background="#11000000"
         android:ems="10"
         android:hint="Password"
-        android:inputType="textPassword"
-        android:layout_marginBottom="130dp"
-        android:layout_alignBottom="@+id/cardView"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText" />
+        android:inputType="textPassword" />
 
     <android.support.v7.widget.CardView
         android:layout_width="300dp"
