--- a/app/src/main/res/layout/activity_add_location_record.xml
+++ b/app/src/main/res/layout/activity_add_location_record.xml
@@ -43,33 +43,35 @@
                     android:inputType="number"
                     android:layout_marginBottom="20dp"/>
             </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <!--<android.support.design.widget.TextInputLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content">-->
 
-                <EditText
-                    android:id="@+id/addTumbon"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="ตำบล"
-                    android:inputType="text"
-                    android:layout_marginBottom="20dp"/>
-            </android.support.design.widget.TextInputLayout>
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                <!--<EditText-->
+                    <!--android:id="@+id/addTumbon"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:hint="ตำบล"-->
+                    <!--android:inputType="text"-->
+                    <!--android:layout_marginBottom="20dp"/>-->
+            <!--</android.support.design.widget.TextInputLayout>-->
+            <!--<android.support.design.widget.TextInputLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content">-->
 
-                <EditText
-                    android:id="@+id/addAmphur"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="อำเภอ"
-                    android:inputType="text"
-                    android:layout_marginBottom="20dp"/>
-            </android.support.design.widget.TextInputLayout>
+                <!--<EditText-->
+                    <!--android:id="@+id/addAmphur"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:hint="อำเภอ"-->
+                    <!--android:inputType="text"-->
+                    <!--android:layout_marginBottom="20dp"/>-->
+            <!--</android.support.design.widget.TextInputLayout>-->
 
 
             <LinearLayout
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
@@ -84,13 +86,15 @@
                     android:id="@+id/spinner_province"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
-                    android:layout_margin="5dp"
-                    android:entries="@array/province_array">
+                    android:layout_margin="5dp">
                 </Spinner>
 
 
 
             </LinearLayout>
+
+
+
 
 
             <GridLayout
@@ -100,6 +104,73 @@
                 android:layout_height="2dp"
                 android:background="@color/black_overlay">
             </GridLayout>
+
+
+            <LinearLayout
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="อำเภอ :"
+                    android:layout_margin ="5dp"
+                    android:textSize="18dp"/>
+                <Spinner
+                    android:id="@+id/spinner_Amphur"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_margin="5dp">
+                </Spinner>
+
+
+
+            </LinearLayout>
+
+            <GridLayout
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/black_overlay">
+            </GridLayout>
+
+
+            <LinearLayout
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="ตำบล :"
+                    android:layout_margin ="5dp"
+                    android:textSize="18dp"/>
+                <Spinner
+                    android:id="@+id/spinner_Tumbon"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_margin="5dp">
+                </Spinner>
+
+
+
+            </LinearLayout>
+
+            <GridLayout
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/black_overlay">
+            </GridLayout>
+
 
 
             <android.support.design.widget.TextInputLayout
