--- a/app/src/main/res/layout/activity_download_plant_page.xml
+++ b/app/src/main/res/layout/activity_download_plant_page.xml
@@ -29,14 +29,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp"
+        android:layout_above="@id/bottomNavigationView"
         android:text="ดาวน์โหลด" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/addButt"
+
         android:text="LastUpdate"
         android:textAlignment="center"
         android:id="@+id/dataView"/>
@@ -47,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/dataView"
-        android:layout_above="@id/bottomNavigationView">
+        android:layout_above="@id/addButt">
 
 
     <ExpandableListView
