--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,16 @@
         <item name="colorAccent">@color/tomato</item>
     </style>
 
+    <style name="nobar" parent="Theme.AppCompat.Light.NoActionBar">
+
+    </style>
+
+
+    <style name="generalnotitle" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowNoTitle">true</item>
+    </style>
+
+
 
 
 
